substrate/frame/support/test/tests/pallet_ui/default_config_with_no_default_in_system3.stderr
error[E0220]: associated type `Block` not found for `Self`
  --> tests/pallet_ui/default_config_with_no_default_in_system3.rs:24:19
   |
24 |     #[pallet::config(with_default)]
   |                      ^^^^^^^^^^^^ there is an associated type `Block` in the trait `frame_system::Config`

error[E0220]: associated type `Block` not found for `Self`
  --> tests/pallet_ui/default_config_with_no_default_in_system3.rs:27:31
   |
27 |         type MyGetParam2: Get<Self::Block>;
   |                                     ^^^^^ there is an associated type `Block` in the trait `frame_system::Config`

error[E0220]: associated type `Block` not found for `Self`
  --> tests/pallet_ui/default_config_with_no_default_in_system3.rs:30:31
   |
30 |         type MyGetParam3: Get<Self::Block>;
   |                                     ^^^^^ there is an associated type `Block` in the trait `frame_system::Config`

error[E0277]: the trait bound `Self: frame_system::Config` is not satisfied
  --> tests/pallet_ui/default_config_with_no_default_in_system3.rs:24:19
   |
24 |     #[pallet::config(with_default)]
   |                      ^^^^^^^^^^^^ the trait `frame_system::Config` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
24 |     #[pallet::config(with_default + frame_system::Config)]
   |                                   ++++++++++++++++++++++

error[E0277]: the trait bound `Self: frame_system::Config` is not satisfied
  --> tests/pallet_ui/default_config_with_no_default_in_system3.rs:33:3
   |
33 |         type MyGetParam4: Get<MySpecialType<Self>>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `frame_system::Config` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
24 |     #[pallet::config(with_default + frame_system::Config)]
   |                                   ++++++++++++++++++++++
